docs/api/qiskit/0.29/qiskit.circuit.library.CYGate.mdx
---
title: CYGate
description: API reference for qiskit.circuit.library.CYGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CYGate
---

# CYGate

<Class id="qiskit.circuit.library.CYGate" github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/y.py" signature="CYGate(label=None, ctrl_state=None)">
  Bases: `qiskit.circuit.controlledgate.ControlledGate`

  Controlled-Y gate.

  **Circuit symbol:**

  ```python
  q_0: ──■──
       ┌─┴─┐
  q_1: ┤ Y ├
       └───┘
  ```

  **Matrix representation:**

  $$
  \begin{split}CY\ q_0, q_1 =
  I \otimes |0 \rangle\langle 0| + Y \otimes |1 \rangle\langle 1|  =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & 0 & 0 & -i \\
          0 & 0 & 1 & 0 \\
          0 & i & 0 & 0
      \end{pmatrix}\end{split}
  $$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌───┐
    q_0: ┤ Y ├
         └─┬─┘
    q_1: ──■──
    ```

    $$
    \begin{split}CY\ q_1, q_0 =
        |0 \rangle\langle 0| \otimes I + |1 \rangle\langle 1| \otimes Y =
        \begin{pmatrix}
            1 & 0 & 0 & 0 \\
            0 & 1 & 0 & 0 \\
            0 & 0 & 0 & -i \\
            0 & 0 & i & 0
        \end{pmatrix}\end{split}
    $$
  </Admonition>

  Create new CY gate.

  ## Methods Defined Here

  ### inverse

  <Function id="qiskit.circuit.library.CYGate.inverse" name="inverse" signature="CYGate.inverse()">
    Return inverted CY gate (itself).
  </Function>

  ## Attributes

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CYGate.ctrl_state" name="ctrl_state">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.CYGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.CYGate.definition" name="definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.CYGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.CYGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.CYGate.name" name="name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.

    **Return type**

    `str`
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.CYGate.num_ctrl_qubits" name="num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    int
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.CYGate.params" name="params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    list

    **Raises**

    **CircuitError** – Controlled gate does not define a base gate
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.CYGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

